# brawlstar-agent

./: .gitignore  CLAUDE.md  HANDOFF.md  HANDOFF_PROMPT.md  pyproject.toml
.cursor/rules/: memory-bank.mdc
.cursor/skills/git-push/: SKILL.md
docs/: analytics-notes.md  brawlstars-api.md  data-sources.md  deployment.md  recommender-v1.md  recommender-v2.md  recommender-v3.md
docs/canvases/: scaling-law-mythicplus.canvas.tsx
memory-bank/: activeContext.md  architecture.md  decisions.md  memory-bank.md  progress.md  techContext.md
models/: recommender_v1.meta.json  recommender_v2_default.meta.json
notebooks/: recommender_v1.ipynb
reports/: ensemble_kitsink.json  recommender_v1.json  recommender_v1_topk.json  recommender_v2_30d.json  recommender_v2_30d_fair.json  recommender_v2_all_fair.json  recommender_v2_default.json  recommender_v2_default_fair.json  recommender_v2_phase1.json  recommender_v2_phase1_solo.json  recommender_v2_phase1p2.json  recommender_v2_phase1p2_solo.json  recommender_v2_phase1p4.json  recommender_v2_phase4.json  recommender_v2_topk.json  recommender_v3_big.json  recommender_v3_big_topk.json  recommender_v3_default.json  recommender_v3_gpu.json  recommender_v3_gpu_fast.json  recommender_v3_phase1_big.json  recommender_v3_phase1_default.json  recommender_v3_phase1p2_default.json  recommender_v3_phase1p2_solo.json  recommender_v3_phase1p2p4_big.json  recommender_v3_phase1p2p4_default.json  recommender_v3_phase1p2p4_m1.json  recommender_v3_phase1p2p4_m2.json  recommender_v3_phase1p2p4_m3.json  recommender_v3_phase1p2p4_xl.json  recommender_v3_phase1p4_default.json  recommender_v3_smoke.json  recommender_v3_smoke2.json  recommender_v3_topk.json  recommender_v3_xl.json  recommender_v3_xl_topk.json  scaling_laws.json  scaling_laws_inventory.csv  slices_smoke.json  slices_summary.json  (+1 more)
reports/recommender_v1/: damian_deepdive.json
scripts/: analyze-battles.py  analyze-recommender.py  analyze-scaling-laws.py  auto-label-and-review.py  chunk-rsync-to-droplet.sh  coldstart-droplet.sh  collect-battles.py  collect-pinned.py  compare-fair-runs.py  crop-reviewed-frames.py  dashboard.py  download-batch.sh  download-gameplay.sh  emu-start.sh  emu-stop.sh  ensemble-stable-test.py  env.sh  eval-slices.py  eval-topk.py  extract-batch.sh  extract-frames.sh  extract-segment.sh  fetch-character-refs.py  generate-review-hub.py  precompute-analytics.py  prepare-review-batch.sh  prepare-review.py  review-all.sh  review-frames.py  rsync-db-from-droplet.sh  rsync-db-to-droplet.sh  run-perception.py  sideload-xapk.sh  sync-cursor-rules.py  train-recommender-v3.py  train-recommender.py  verify-bug.py
src/brawlstar_agent/: analytics.py  api_client.py  capture.py  character_match.py  collector.py  crop.py  dashboard_data.py  db.py  models.py  ocr.py  perception.py  ui_regions.py
src/brawlstar_agent/recommender/: __init__.py  baselines.py  cv.py  dataset.py  eval_slices.py  features.py  inference.py  team_model.py  topk_eval.py  transformer_model.py
