[project]
name = "brawlstar-agent"
version = "0.1.0"
description = "Brawl Stars AI research sandbox — capture, perception, and offline analysis"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "numpy",
    "Pillow",
    "yt-dlp",
    "pytesseract",
    "jupyter",
    "matplotlib",
    "httpx",
    "python-dotenv",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
]

# Per-machine cache location is set via UV_CACHE_DIR env var (see docs/deployment.md).
# Local dev machine: export UV_CACHE_DIR=/media/lin/disk2/.uv-cache (avoids small /home).
# Droplet: export UV_CACHE_DIR=$HOME/.cache/uv (default).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brawlstar_agent"]
